--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div id="after_submit">
-            <form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
+            <form id="contact_form" action="#" method="get" enctype="multipart/form-data">
                 <div class="row">
                     <label class="required" for="name">Your name:</label><br />
                     <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
