Update contacto.html and estilo.css

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -55,20 +55,52 @@
             </form>
         </div>
     </main>
+    <footer class="text-center text-white">
+        <section class="container p-4">
+            <h5>Encontrame en mis redes sociales:</h5>
+            <div>
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3"
+                    href="mailto:josemanuelmany04@gmail.com?subject=Quiero%20más%20información&amp;body=Hola Construcciones H Londoño quiero más información acerca de"
+                    role="button">
+                    <i title="Icono de mail" class="far fa-envelope" aria-hidden="true"></i><span class="sr-only">Icono
+                        de mail</span>
+                </a>
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3"
+                    href="https://wa.me/+573226230973?text=Hola Construcciones H Londoño queria más información acerca de"
+                    role="button">
+                    <i title="Icono de whatsapp" class="fab fa-whatsapp" aria-hidden="true"></i><span
+                        class="sr-only">Icono de whatsapp</span>
+                </a>
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3"
+                    href="https://www.instagram.com/construccioneshlondono/?next=%2F" role="button">
+                    <i title="Icono de Instagram" class="fab fa-instagram" aria-hidden="true"></i><span
+                        class="sr-only">Icono de Instagram</span>
+                </a>
+            </div>
+            <div>
+                <div class="modal fade" id="ModalDelFooter" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
 
-    <footer class="footer1">
-        <a class="icono" href="https://www.google.com/intl/es/gmail/about/" target="_blank">
-            <i class="far fa-envelope"></i>
-        </a>
-        <a class="icono" href="https://www.whatsapp.com/" target="_blank">
-            <i class="fab fa-whatsapp"></i>
-        </a>
-        <a class="icono" href="https://www.instagram.com/" target="_blank">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <p>Hecho por Jose Manuel Londoño Castaño</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+            </form>
+            </div>
+            <div class="text-center">
+                <p>Construcciones H Londono</p>
+                <p>Copyright © 2022. Todos los derechos reservados</p>
+                <p>Desarrollado por <a class="subrayadoFooter" href="https://github.com/Joselito17821"
+                        target="_blank">Jose Manuel Londoño Castaño</a></p>
+            </div>
+        </section>
     </footer>
-
+    
 </body>
 
 </html>
