update contacto.html and estilo.css

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,7 +66,7 @@
                         de mail</span>
                 </a>
                 <a target="_blank" class="btn btn-outline-light btn-floating m-3"
-                    href="https://wa.me/+573226230973?text=Hola Construcciones H Londoño queria más información acerca de"
+                    href="https://wa.me/+573226230973?text=Hola Construcciones H Londoño quiero  más información acerca de"
                     role="button">
                     <i title="Icono de whatsapp" class="fab fa-whatsapp" aria-hidden="true"></i><span
                         class="sr-only">Icono de whatsapp</span>
