--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -17,20 +17,17 @@
         <div class="logo">
             <img src="../images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" />
         </div>
-            <nav >
-                <ul class="divAul2">
-                    <li><a href="./../index.html"> home </a></li>
-                    <li><a href="./servicios.html"> Servicios </a></li>
-                    <li><a href="./portafolio.html"> Portafolio</a></li>
-                    <li><a href="./galería.html"> Galeria</a></li>
-                    <li><a href="./contacto.html"> Contacto</a></li>
-                </ul>
-            </nav>
+        <nav>
+            <ul class="divAul2">
+                <li><a href="./../index.html"> home </a></li>
+                <li><a href="./servicios.html"> Servicios </a></li>
+                <li><a href="./portafolio.html"> Portafolio</a></li>
+                <li><a href="./galería.html"> Galeria</a></li>
+                <li><a href="./contacto.html"> Contacto</a></li>
+            </ul>
+        </nav>
     </header>
-    <div class="casa1">
-        <img src="../images/casa b y n.jpg" width="600px" height="400px" alt="casa" />
-    </div>
-    <main>
+    <main class="servicios">
         <div class="contenido-servicios">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae aspernatur doloremque mollitia
                 explicabo,<br>
@@ -48,8 +45,10 @@
                 amet consectetur adipisicing elit. Ducimus sunt, quia libero cum modi cumque natus facilis nam iste
                 molestias officiis ipsa consequatur commodi suscipit,<br> laboriosam ullam pariatur veniam eveniet?</p>
         </div>
+        <div class="casa1">
+            <img src="../images/casa b y n.jpg" width="600px" height="400px" alt="casa" />
+        </div>
     </main>
-
 </body>
 
 </html>
