--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
         <div class="logo">
             <img src="./images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" />
         </div>
-        <nav>
-            <ul class="divAul1">
-                <li><a href="./index.html"> home </a></li>
-                <li><a href="./pages/servicios.html"> Servicios </a></li>
-                <li><a href="./pages/portafolio.html"> Portafolio</a></li>
-                <li><a href="./pages/galería.html"> Galeria</a></li>
-                <li><a href="./pages/contacto.html"> Contacto</a></li>
-            </ul>
-        </nav>
+        <div>
+            <nav>
+                <ul class="divAul1">
+                    <li><a href="./index.html"> home </a></li>
+                    <li><a href="./pages/servicios.html"> Servicios </a></li>
+                    <li><a href="./pages/portafolio.html"> Portafolio</a></li>
+                    <li><a href="./pages/galería.html"> Galeria</a></li>
+                    <li><a href="./pages/contacto.html"> Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <div class="contenido">
         <img src="./images/casa b.jpg" width="600px" height="400px" alt="casa" />
@@ -64,7 +66,7 @@
             </p>
         </div>
     </main>
-    
+
 </body>
 
 </html>
