--- a/index.html
+++ b/index.html
@@ -52,20 +52,41 @@
                 amet consectetur adipisicing elit. Ducimus sunt, quia libero cum modi cumque natus facilis nam iste
                 molestias officiis ipsa consequatur commodi suscipit, laboriosam ullam pariatur veniam eveniet? Lorem
                 ipsum
-                dolor sit amet consectetur adipisicing elit. Ducimus dicta animi voluptates ab cumque iusto facere,
-                dolore
-                nemo numquam ratione totam error hic, facilis, eos exercitationem inventore delectus quidem ipsa! Lorem
-                ipsum dolor sit, amet consectetur adipisicing elit. Quod commodi modi nesciunt voluptatibus voluptatem
-                voluptates veniam soluta dolorum architecto sunt deserunt vitae in officiis esse officia, dolores
-                expedita!
-                Molestias, tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam veritatis ab,
-                provident
-                vel deleniti enim nemo facere eius tempora ut minima quam distinctio minus dolorum incidunt sunt
-                accusamus
-                omnis dolores!
+                
+                
             </p>
         </div>
     </main>
+    <footer class="text-center text-white">
+        <section class="container p-4">
+            <h5>Encontrame en mis redes sociales:</h5>
+            <div>
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3"
+                    href="mailto:josemanuelmany04@gmail.com?subject=Quiero%20más%20información&amp;body=Hola Construcciones H Londoño quiero más información acerca de"
+                    role="button">
+                    <i title="Icono de mail" class="far fa-envelope" aria-hidden="true"></i><span class="sr-only">Icono
+                        de mail</span>
+                </a>
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3"
+                    href="https://wa.me/+573226230973?text=Hola Construcciones H Londoño quiero  más información acerca de"
+                    role="button">
+                    <i title="Icono de whatsapp" class="fab fa-whatsapp" aria-hidden="true"></i><span
+                        class="sr-only">Icono de whatsapp</span>
+                </a>
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3"
+                    href="https://www.instagram.com/construccioneshlondono/?next=%2F" role="button">
+                    <i title="Icono de Instagram" class="fab fa-instagram" aria-hidden="true"></i><span
+                        class="sr-only">Icono de Instagram</span>
+                </a>
+            </div>
+            <div class="text-center">
+                <p>Construcciones H Londono</p>
+                <p>Copyright © 2022. Todos los derechos reservados</p>
+                <p>Desarrollado por <a class="subrayadoFooter" href="https://github.com/Joselito17821"
+                        target="_blank">Jose Manuel Londoño Castaño</a></p>
+            </div>
+        </section>
+    </footer>
 
 </body>
 
