--- a/pages/galería.html
+++ b/pages/galería.html
@@ -17,49 +17,51 @@
         <div class="logo">
             <img src="../images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" />
         </div>
-            <nav >
-                <ul class="divAul2">
-                    <li><a href="./../index.html"> home </a></li>
-                    <li><a href="./servicios.html"> Servicios </a></li>
-                    <li><a href="./portafolio.html"> Portafolio</a></li>
-                    <li><a href="./galería.html"> Galeria</a></li>
-                    <li><a href="./contacto.html"> Contacto</a></li>
-                </ul>
-            </nav>
+        <nav>
+            <ul class="divAul2">
+                <li><a href="./../index.html"> home </a></li>
+                <li><a href="./servicios.html"> Servicios </a></li>
+                <li><a href="./portafolio.html"> Portafolio</a></li>
+                <li><a href="./galería.html"> Galeria</a></li>
+                <li><a href="./contacto.html"> Contacto</a></li>
+            </ul>
+        </nav>
     </header>
     <main class="containergaleria">
-    <div class="imagen-galeria">
+        <div class="galeria">
 
-        <img class="imagen-uno" src="../images/casa mansion.jpg" width="150px" height="150px" alt="casa" />
-        <br>
-        <img class="imagen-uno"  src="../images/casa n.jpg" width="150px" height="150px" alt="casa" />
-        <br>
-        <img class="imagen-uno"  src="../images/casa b.jpg" width="150px" height="150px" alt="casa" />
-        <br>
+            <img src="../images/casa b 2.jpg" width="400px" height="250px" alt="casa" />
+        </div>
+        
+        <div class="imagen-galeria">
 
-    </div>
-    <div class="imagen-galeria">
-        <img class="imagen-dos" src="../images/casa mansion.jpg" width="150px" height="150px" alt="casa" />
-        <br>
-        <img class="imagen-dos" src="../images/casa n.jpg" width="150px" height="150px" alt="casa" />
-        <br>
-        <img class="imagen-dos" src="../images/casa b.jpg" width="150px" height="150px" alt="casa" />
-        <br>
-    </div>
-    <div class="imagen-galeria">
-        <img class="imagen-tres" src="../images/casa mansion.jpg" width="150px" height="150px" alt="casa" />
-        <br>
-        <img class="imagen-tres" src="../images/casa n.jpg" width="150px" height="150px" alt="casa" />
-        <br>
-        <img class="imagen-tres" src="../images/casa b.jpg" width="150px" height="150px" alt="casa" />
-        <br>
-    </div>
+            <img class="imagen-uno" src="../images/casa mansion.jpg" width="150px" height="150px" alt="casa" />
+            <br>
+            <img class="imagen-uno" src="../images/casa n.jpg" width="150px" height="150px" alt="casa" />
+            <br>
+            <img class="imagen-uno" src="../images/casa b.jpg" width="150px" height="150px" alt="casa" />
+            <br>
 
-    <div class="galeria">
-        <img src="../images/casa b 2.jpg" width="400px" height="250px"
-            alt="casa" />
-    </div>
-</main>
+        </div>
+        <div class="imagen-galeria">
+            <img class="imagen-dos" src="../images/casa mansion.jpg" width="150px" height="150px" alt="casa" />
+            <br>
+            <img class="imagen-dos" src="../images/casa n.jpg" width="150px" height="150px" alt="casa" />
+            <br>
+            <img class="imagen-dos" src="../images/casa b.jpg" width="150px" height="150px" alt="casa" />
+            <br>
+        </div>
+        <div class="imagen-galeria">
+            <img class="imagen-tres" src="../images/casa mansion.jpg" width="150px" height="150px" alt="casa" />
+            <br>
+            <img class="imagen-tres" src="../images/casa n.jpg" width="150px" height="150px" alt="casa" />
+            <br>
+            <img class="imagen-tres" src="../images/casa b.jpg" width="150px" height="150px" alt="casa" />
+            <br>
+        </div>
+
+
+    </main>
     <footer class="text-center text-white">
         <section class="container1 p-41">
             <h5>Encontrame en mis redes sociales:</h5>
