--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
     </header>
-
+<main class="portafolio">
     <div class="contenido-portafolio">
         <h2 class="titulo-portafolio">Ejemplo portafolio</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Quae id asperiores dolores tenetur. Amet beatae
@@ -61,8 +61,9 @@
             <img src="../images/casa b y n.jpg" width="100px" height="100px" alt="casa" />
         </ul>
     </div>
+</main>
     <footer class="text-center text-white">
-        <section class="container p-4">
+        <section class="container p-42">
             <h5>Encontrame en mis redes sociales:</h5>
             <div>
                 <a target="_blank" class="btn btn-outline-light btn-floating m-3"
