--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div>
             <nav>
                 <ul class="divAul1">
-                    <li><a href="./index.html"> home </a></li>
+                    <li><a href="./index.html"> Home </a></li>
                     <li><a href="./pages/servicios.html"> Servicios </a></li>
                     <li><a href="./pages/portafolio.html"> Portafolio</a></li>
                     <li><a href="./pages/galería.html"> Galeria</a></li>
