--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -19,7 +19,7 @@
         </div>
             <nav >
                 <ul class="divAul1">
-                    <li><a href="./../index.html"> home </a></li>
+                    <li><a href="./../index.html"> Home </a></li>
                     <li><a href="./servicios.html"> Servicios </a></li>
                     <li><a href="./portafolio.html"> Portafolio</a></li>
                     <li><a href="./galería.html"> Galeria</a></li>
