--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body id="uno">
     <header class="divA1">
         <div class="logo">
-            <img src="./images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" />
+            <a href="./index.html"> <img src="./images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" /></a>
         </div>
         <div>
             <nav>
@@ -28,6 +28,7 @@
                 </ul>
             </nav>
         </div>
+        
     </header>
     <div class="contenido">
         <img src="./images/casa b.jpg" width="600px" height="400px" alt="casa" />
