--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -15,7 +15,7 @@
 <body id="tres">
     <header class="divA1">
         <div class="logo">
-            <img src="../images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" />
+            <a href="./../index.html"> <img src="../images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" /></a>
         </div>
             <nav >
                 <ul class="divAul1">
