--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body id="uno">
     <header class="divA1">
         <div class="logo">
-            <a href="./index.html"> <img src="./images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" /></a>
+            <a href="./index.html"> <img src="./images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg"  alt="logo" /></a>
         </div>
         <div>
             <nav>
@@ -31,7 +31,7 @@
         
     </header>
     <div class="contenido">
-        <img src="./images/casa b.jpg" width="600px" height="400px" alt="casa" />
+        <img src="./images/casa b.jpg"  alt="casa" />
     </div>
     <div class="contenido">
         <h1>¿Quienes somos?</h1>
