--- a/pages/galería.html
+++ b/pages/galería.html
@@ -15,7 +15,7 @@
 <body id="cuatro">
     <header class="divA2">
         <div class="logo">
-            <a href="./../index.html"> <img src="../images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" /></a>
+            <a href="./../index.html"> <img src="../images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg"  alt="logo" /></a>
         </div>
         <nav>
             <ul class="divAul2">
@@ -30,33 +30,33 @@
     <main class="containergaleria">
         <div class="galeria">
 
-            <img src="../images/casa b 2.jpg" width="400px" height="250px" alt="casa" />
+            <img src="../images/casa b 2.jpg"  alt="casa" />
         </div>
         
         <div class="imagen-galeria">
 
-            <img class="imagen-uno" src="../images/casa mansion.jpg" width="150px" height="150px" alt="casa" />
+            <img class="imagen-uno" src="../images/casa mansion.jpg"  alt="casa" />
             <br>
-            <img class="imagen-uno" src="../images/casa n.jpg" width="150px" height="150px" alt="casa" />
+            <img class="imagen-uno" src="../images/casa n.jpg"  alt="casa" />
             <br>
-            <img class="imagen-uno" src="../images/casa b.jpg" width="150px" height="150px" alt="casa" />
+            <img class="imagen-uno" src="../images/casa b.jpg"  alt="casa" />
             <br>
 
         </div>
         <div class="imagen-galeria">
-            <img class="imagen-dos" src="../images/casa mansion.jpg" width="150px" height="150px" alt="casa" />
+            <img class="imagen-dos" src="../images/casa mansion.jpg"  alt="casa" />
             <br>
-            <img class="imagen-dos" src="../images/casa n.jpg" width="150px" height="150px" alt="casa" />
+            <img class="imagen-dos" src="../images/casa n.jpg"  alt="casa" />
             <br>
-            <img class="imagen-dos" src="../images/casa b.jpg" width="150px" height="150px" alt="casa" />
+            <img class="imagen-dos" src="../images/casa b.jpg"  alt="casa" />
             <br>
         </div>
         <div class="imagen-galeria">
-            <img class="imagen-tres" src="../images/casa mansion.jpg" width="150px" height="150px" alt="casa" />
+            <img class="imagen-tres" src="../images/casa mansion.jpg" alt="casa" />
             <br>
-            <img class="imagen-tres" src="../images/casa n.jpg" width="150px" height="150px" alt="casa" />
+            <img class="imagen-tres" src="../images/casa n.jpg"  alt="casa" />
             <br>
-            <img class="imagen-tres" src="../images/casa b.jpg" width="150px" height="150px" alt="casa" />
+            <img class="imagen-tres" src="../images/casa b.jpg"  alt="casa" />
             <br>
         </div>
 
