--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -15,7 +15,7 @@
 <body id="tres">
     <header class="divA1">
         <div class="logo">
-            <a href="./../index.html"> <img src="../images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" /></a>
+            <a href="./../index.html"> <img src="../images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg"  alt="logo" /></a>
         </div>
             <nav >
                 <ul class="divAul1">
@@ -34,9 +34,9 @@
             quasi minima<br> nihil assumenda libero, blanditiis tempore nam illo distinctio qui<br> neque quam possimus
             reprehenderit.</p>
         <ul class="imagen-portafolio">
-            <img src="../images/casa b.jpg" width="100px" height="100px" alt="casa" />
+            <img src="../images/casa b.jpg"  alt="casa" />
             <br>
-            <img src="../images/casa b y n.jpg" width="100px" height="100px" alt="casa" />
+            <img src="../images/casa b y n.jpg"  alt="casa" />
         </ul>
     </div>
     <div class="contenido-portafolio">
@@ -45,9 +45,9 @@
             quasi minima<br> nihil assumenda libero, blanditiis tempore nam illo distinctio qui<br> neque quam possimus
             reprehenderit.</p>
         <ul class="imagen-portafolio">
-            <img src="../images/casa b.jpg" width="100px" height="100px" alt="casa" />
+            <img src="../images/casa b.jpg"  alt="casa" />
             <br>
-            <img src="../images/casa b y n.jpg" width="100px" height="100px" alt="casa" />
+            <img src="../images/casa b y n.jpg"  alt="casa" />
         </ul>
     </div>
     <div class="contenido-portafolio">
@@ -56,9 +56,9 @@
             quasi minima<br> nihil assumenda libero, blanditiis tempore nam illo distinctio qui<br> neque quam possimus
             reprehenderit.</p>
         <ul class="imagen-portafolio">
-            <img src="../images/casa b.jpg" width="100px" height="100px" alt="casa" />
+            <img src="../images/casa b.jpg"  alt="casa" />
             <br>
-            <img src="../images/casa b y n.jpg" width="100px" height="100px" alt="casa" />
+            <img src="../images/casa b y n.jpg" alt="casa" />
         </ul>
     </div>
 </main>
