--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -15,7 +15,7 @@
 <body id="dos">
     <header class="divA2">
         <div class="logo">
-            <a href="./../index.html"> <img src="../images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg" width="200px" height="100px" alt="logo" /></a>
+            <a href="./../index.html"> <img src="../images/LOGO CONSTRUCCIONESH.LONDOÑO.jpg"  alt="logo" /></a>
         </div>
         <nav>
             <ul class="divAul2">
@@ -46,7 +46,7 @@
                 molestias officiis ipsa consequatur commodi suscipit,<br> laboriosam ullam pariatur veniam eveniet?</p>
         </div>
         <div class="casa1">
-            <img src="../images/casa b y n.jpg" width="600px" height="400px" alt="casa" />
+            <img src="../images/casa b y n.jpg"  alt="casa" />
         </div>
     </main>
     <footer class="text-center text-white">
