--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </div>
     <main>
         <div class="contenido2">
-            <p class="contenido3"> CONSTRUCCIONES H. LONDOÑO, es una empresa dedicada a las actividades de Construcciòn
-                y
+            <p class="contenido3">
+                CONSTRUCCIONES H. LONDOÑO, es una empresa dedicada a las actividades de Construcciòn y
                 todo lo relacionado con la Ingenieria Civil mecánica hidráulica que diseña , construye y realiza
                 mantenimiento de las infraestructuras emplazadas en el entorno, incluyendo carreteras, ferrocarriles,
                 puentes, canales, presas, puertos, aeropuertos, entre otros.
