--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -29,21 +29,10 @@
     </header>
     <main class="servicios">
         <div class="contenido-servicios">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae aspernatur doloremque mollitia
-                explicabo,<br>
-                cumque, quae molestias perspiciatis voluptatibus deleniti corporis doloribus maxime ab cupiditate
-                perferendis tempora tenetur.<br> Delectus, voluptates ipsam! Lorem, ipsum dolor sit amet consectetur
-                adipisicing
-                elit.Consequuntur porro ipsum eius tenetur<br> explicabo quas perspiciatis dignissimos quaerat,
-                doloremque
-                assumenda qui similique repellendus, aut neque sequi<br> corporis quia harum veniam. Lorem ipsum dolor
-                sit amet
-                consectetur, adipisicing elit. Vitae nam commodi voluptate, placeat rem esse veritatis <br>pariatur
-                repudiandae
-                obcaecati vero accusantium? Velit quae libero quas<br> hic adipisci nemo nostrum officia! Lorem
-                ipsum<br> dolor sit
-                amet consectetur adipisicing elit. Ducimus sunt, quia libero cum modi cumque natus facilis nam iste
-                molestias officiis ipsa consequatur commodi suscipit,<br> laboriosam ullam pariatur veniam eveniet?</p>
+            <p> <h3>CONSTRUCCIÓN:</h3> Obra Civil,Edificación, Restauración<br>
+                <h3>DISEÑO</h3> Redacción de Proyectos, Asesoramiento Específico, Diseño de Interiores<br>
+                <h3>MANTENIMIENTO:</h3> Conservación de Equipos e Instalaciones, Mantenimiento Preventivo, Conservación de Inmuebles
+            </p>
         </div>
         <div class="casa1">
             <img src="../images/casa b y n.jpg"  alt="casa" />
