Corrección de contacto

--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -29,10 +29,8 @@
     </header>
 <main class="portafolio">
     <div class="contenido-portafolio">
-        <h2 class="titulo-portafolio">Ejemplo portafolio</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Quae id asperiores dolores tenetur. Amet beatae
-            quasi minima<br> nihil assumenda libero, blanditiis tempore nam illo distinctio qui<br> neque quam possimus
-            reprehenderit.</p>
+        <h2 class="titulo-portafolio">Obra la Alameda</h2>
+        <p>Esta obra consta de 7 pisos, con una fachada de color negro y blanco</p>
         <ul class="imagen-portafolio">
             <img src="../images/casa b.jpg"  alt="casa" />
             <br>
@@ -40,10 +38,8 @@
         </ul>
     </div>
     <div class="contenido-portafolio">
-        <h2 class="titulo-portafolio">Ejemplo portafolio</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Quae id asperiores dolores tenetur. Amet beatae
-            quasi minima<br> nihil assumenda libero, blanditiis tempore nam illo distinctio qui<br> neque quam possimus
-            reprehenderit.</p>
+        <h2 class="titulo-portafolio">Obra el Canadá</h2>
+        <p>Esta obra consta de 7 pisos, con una fachada de color negro y blanco</p>
         <ul class="imagen-portafolio">
             <img src="../images/casa b.jpg"  alt="casa" />
             <br>
@@ -51,10 +47,8 @@
         </ul>
     </div>
     <div class="contenido-portafolio">
-        <h2 class="titulo-portafolio">Ejemplo portafolio</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Quae id asperiores dolores tenetur. Amet beatae
-            quasi minima<br> nihil assumenda libero, blanditiis tempore nam illo distinctio qui<br> neque quam possimus
-            reprehenderit.</p>
+        <h2 class="titulo-portafolio">Obra la Sonadora</h2>
+        <p>Esta obra consta de 7 pisos, con una fachada de color negro y blanco</p>
         <ul class="imagen-portafolio">
             <img src="../images/casa b.jpg"  alt="casa" />
             <br>
