--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
         </div>
 
     </header>
-    <div class="contenido">
-        <img src="./images/casa b.jpg" alt="casa" />
+    <main class="main-index">
+    <div class="img">
+        <img src="./images/casa b.jpg" alt="casa" >
     </div>
     <div class="contenido">
         <h1>¿Quienes somos?</h1>
     </div>
-    <main>
+    
         <div class="contenido2">
             <p class="contenido3">
                 CONSTRUCCIONES H. LONDOÑO, es una empresa dedicada a las actividades de Construcciòn y
