--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta name="description" content="En esta página web veras los distintos proyectos de Construcción realizados por la empresa Construcciones H Londoño, verás desde casas de dos plantas, hasta una hermosa casa finca de 3 plantas">
+    <meta name="keywords" content="ACABOS, PRESUPUESTO, CONSTRUCCIONES, CASAS,">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +11,7 @@
     <title>Construcciones H.Londoño</title>
     <link rel="shortcut icon" href="./images/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/de9d664f36.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body id="uno">
