--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,7 +9,7 @@
     <title>Servicios</title>
     <link rel="shortcut icon" href="../images/favicon-32x32.png">
     <script src="https://kit.fontawesome.com/de9d664f36.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./../css/estilo.css">
+    <link rel="stylesheet" href="./../css/main.css">
 </head>
 
 <body id="dos">
